--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -8,22 +8,7 @@
         
     </div>
     <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-        <form (ngSubmit)="agregar()">
-            <input type="text" placeholder="Nombre" name="nombre"
-         [(ngModel)]="nuevo.nombre"
-                     /> 
-             <!-- [value]="nuevo.nombre" 
-            (input)="cambiarNombre( $event )" -->
-
-
-   
-            <input type="number" placeholder="Poder" 
-            name="poder"
-         [(ngModel)]="nuevo.poder"/>
-            <button type="submit">Agregar</button>
-
-        </form>
+      <app-agregar [add]="personajes" [nuevo]="nuevo"></app-agregar>
+       
     </div>
 </div>
